deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: starbucks-api
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: starbucks-api
    spec:
      serviceAccountName: sa-cloud-sql
      containers:
      - name: starbucks-api
        image: gcr.io/PROJECT_ID/IMAGE:TAG
      - env:
        - name: MYSQL_HOST
          value: starbucks-mysql
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
