service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: starbucks-mysql-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306 
  selector:
    name: starbucks-mysql
