service.yaml
# Do not rename this file - the filename is used by github CI/CD

apiVersion: v1
kind: Service
metadata:
  name: starbucks-api-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: starbucks-api
