ingress-api-k8s.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "starbucks-api-ingress"
  namespace: "default"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "starbucks-api-service"
            port:
              number: 8080
